Fix contrast for Weather Display

--- a/src/components/WeatherDisplay.module.css
+++ b/src/components/WeatherDisplay.module.css
@@ -3,9 +3,10 @@
     margin: 0 auto;
     margin-bottom: 5rem;
     margin-top: auto;
-    color: #aaa;
+    color: #ccc;
     gap: 1rem;
     align-items: center;
+    text-shadow: 0px 0px 5px #333;
 }
 
 .displayTemp {
